[gd_scene load_steps=12 format=3 uid="uid://b56wn1dctrh8x"]

[ext_resource type="Texture2D" uid="uid://6kx1do5kk62u" path="res://enemies/enemy_types/rabbit/assets/rabbit.png" id="1_svuvg"]
[ext_resource type="Script" path="res://enemies/enemy_types/rabbit/rabbit_movement.gd" id="2_atdhp"]
[ext_resource type="Texture2D" uid="uid://bofcprn52klmy" path="res://enemies/enemy_types/rabbit/assets/rabbit2.png" id="2_pe3a5"]
[ext_resource type="PackedScene" uid="uid://cayf47pm8vmxd" path="res://enemies/modules/spike/spike.tscn" id="4_jyqx5"]
[ext_resource type="PackedScene" uid="uid://wsyev6mgyaxq" path="res://enemies/modules/enemy_health/enemy_health.tscn" id="5_xku3m"]
[ext_resource type="Script" path="res://sfx_player/autoload/sf_link.gd" id="6_h16ms"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qyrwv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_svuvg")
}, {
"duration": 1.0,
"texture": ExtResource("2_pe3a5")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plgpl"]
size = Vector2(5, 1.96875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6cu1v"]
size = Vector2(2, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fndl"]
size = Vector2(14, 11)

[sub_resource type="Resource" id="Resource_bswtp"]
script = ExtResource("6_h16ms")
sf_name = "hurt"
sf_vol = -1.0
sf_pitch = 1.0

[node name="rabbit" type="Node2D"]

[node name="rabbit_anim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qyrwv")
autoplay = "default"
frame_progress = 0.695435

[node name="rabbit_movement" type="Node2D" parent="." node_paths=PackedStringArray("rab_body", "h_timer", "side_area", "vert_area", "col_pts")]
script = ExtResource("2_atdhp")
rab_body = NodePath("..")
h_timer = NodePath("../h_timer")
side_area = NodePath("../rside_area")
vert_area = NodePath("../rdown_area")
col_pts = [NodePath("../collision_points/up"), NodePath("../collision_points/down"), NodePath("../collision_points/left"), NodePath("../collision_points/right")]

[node name="h_timer" type="Timer" parent="."]

[node name="rdown_area" type="Area2D" parent="."]
position = Vector2(0, 6)
collision_layer = 0
collision_mask = 34

[node name="rabbit_shape" type="CollisionShape2D" parent="rdown_area"]
position = Vector2(0, 0.015625)
shape = SubResource("RectangleShape2D_plgpl")

[node name="rside_area" type="Area2D" parent="."]
position = Vector2(7, 0)

[node name="rside_shape" type="CollisionShape2D" parent="rside_area"]
shape = SubResource("RectangleShape2D_6cu1v")

[node name="collision_points" type="Node2D" parent="."]

[node name="up" type="Node2D" parent="collision_points"]
position = Vector2(0, -5)

[node name="down" type="Node2D" parent="collision_points"]
position = Vector2(0, 6)

[node name="left" type="Node2D" parent="collision_points"]
position = Vector2(-7, 0)

[node name="right" type="Node2D" parent="collision_points"]
position = Vector2(7, 0)

[node name="health+damage" type="Node2D" parent="."]

[node name="spike" parent="health+damage" instance=ExtResource("4_jyqx5")]

[node name="CollisionShape2D" parent="health+damage/spike/Area2D" index="0"]
position = Vector2(0, 0.5)

[node name="hitbox_area" type="Area2D" parent="health+damage"]
collision_layer = 4

[node name="hitbox_shape" type="CollisionShape2D" parent="health+damage/hitbox_area"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_4fndl")

[node name="enemy_health" parent="health+damage" node_paths=PackedStringArray("die_node") instance=ExtResource("5_xku3m")]
hurt_sf = SubResource("Resource_bswtp")
die_node = NodePath("../..")

[connection signal="timeout" from="h_timer" to="rabbit_movement" method="_on_h_timer_timeout"]
[connection signal="area_entered" from="rdown_area" to="rabbit_movement" method="_on_rdown_area_area_entered"]
[connection signal="body_entered" from="rdown_area" to="rabbit_movement" method="_on_rdown_area_body_entered"]
[connection signal="area_entered" from="rside_area" to="rabbit_movement" method="_on_rside_area_area_entered"]
[connection signal="body_entered" from="rside_area" to="rabbit_movement" method="_on_rside_area_body_entered"]

[editable path="health+damage/spike"]
